fix resizing on mobile

--- a/src/components/ResizableSidePanel.module.scss
+++ b/src/components/ResizableSidePanel.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   height: 100%;
   user-select: none;
-  overflow: hidden;
   position: relative;
 }
 
